--- a/inicio/templates/inicio/yo.html
+++ b/inicio/templates/inicio/yo.html
@@ -1,13 +1,14 @@
 {% extends 'base.html' %}
 
 {% block Title_head %}
-<title>Inicio</title>
+<title>Acerca de mi</title>
 {% endblock Title_head %}
 
 
 {% block h1_header %}
-<h1>Bienvenidos a mi página de inicio</h1>
+<h1>Lucas Pelozzi</h1>
 {% endblock h1_header %}
 
 {% block Contenido %}
+Salve! Este es mi proyecto de entrega final.
 {% endblock Contenido %}
