--- a/usuarios/templates/usuarios/logout.html
+++ b/usuarios/templates/usuarios/logout.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 
 {% block Title_head %}
-<title>Inicio</title>
+<title>Logout</title>
 {% endblock Title_head %}
 
 
 {% block h1_header %}
-<h1>Bienvenido a mi página de inicio</h1>
+<h1>Usuario deslogueado</h1>
 {% endblock h1_header %}
 
 {% block Contenido %}
