--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,9 @@
                 <a class="navbar-brand" href={% url 'inicio:lista_blogs' %}>Blogs</a>
 
                 {% if request.user.is_authenticated %}
-                <img src={{request.user.modelousers.avatar_pic}} alt="">
+                {% if request.user.modelousers %}
+                <img src={{request.user.modelousers.avatar_pic.url}} alt="" height='40p'>
+                {% endif %}
                 <a href={% url 'usuarios:editar_usuario' %}>{{request.user.username}}</a>
                 <a class="btn btn-primary" href={% url 'usuarios:logout' %}>Salir</a>
                 {% else %}
