Paso todos los cambios, falta manejo de imagenes

--- a/inicio/templates/inicio/crear_blog.html
+++ b/inicio/templates/inicio/crear_blog.html
@@ -14,6 +14,7 @@
 <form action={% url 'inicio:crear_blog' %} method="POST">
     {% csrf_token %}
     <table>
+        {{form.media}}
         {{form}}
     </table>
     <button>Crear</button>
