--- a/inicio/templates/inicio/modificar_blog.html
+++ b/inicio/templates/inicio/modificar_blog.html
@@ -14,6 +14,7 @@
 <form action={% url 'inicio:modificar_blog' blog.id %} method="post">
     {% csrf_token %}
     <table>
+        {{form.media}}
         {{form}}
     </table>
     <button>Modificar</button>
