--- a/templates/base.html
+++ b/templates/base.html
@@ -22,19 +22,19 @@
         <!-- Navigation-->
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
-                <a class="navbar-brand" href={% url 'inicio:inicio' %}>Inicio</a>
-                <a class="navbar-brand" href={% url 'inicio:lista_blogs' %}>Blogs</a>
-
+                <a class="navbar-brand" href="{% url 'inicio:inicio' %}">Inicio</a>
+                <a class="navbar-brand" href="{% url 'inicio:lista_blogs' %}">Blogs</a>
+        
                 {% if request.user.is_authenticated %}
                     {% if request.user.modelousers.avatar %}
-                        <img src={{request.user.modelousers.avatar.url}} alt="" height='40p'>
-                {% endif %}
-                <a href={% url 'usuarios:editar_usuario' %}>{{request.user.username}}</a>
-                <a class="btn btn-primary" href={% url 'usuarios:logout' %}>Salir</a>
+                        <img src="{{ request.user.modelousers.avatar.url }}" alt="" height="40p">
+                    {% endif %}
+                    <a href="{% url 'usuarios:editar_usuario' %}">{{ request.user.username }}</a>
+                    <a class="btn btn-primary" href="{% url 'usuarios:logout' %}">Salir</a>
+                    <a class="btn btn-primary" href="{% url 'mensajeria:enviar_mensaje' %}">Enviar mensaje</a>
                 {% else %}
-                <a class="btn btn-primary" href={% url 'usuarios:login' %}>Ingresar</a>
-                <a class="btn btn-primary" href={% url 'usuarios:registro' %}>Registrarse</a>
-                <a class="btn btn-primary" href={% url 'mensajeria:enviar_mensaje' %}>Enviar mensaje</a>
+                    <a class="btn btn-primary" href="{% url 'usuarios:login' %}">Ingresar</a>
+                    <a class="btn btn-primary" href="{% url 'usuarios:registro' %}">Registrarse</a>
                 {% endif %}
             </div>
         </nav>
@@ -45,16 +45,15 @@
                     <div class="col-xl-6">
                         <div class="text-center text-white">
                             {% block h1_header %}
-                            <h1 class="mb-5">Generate more leads with a professional landing page!</h1>
+                            <h1 class="mb-5">Enviar mensaje.</h1>
                             {% endblock h1_header %}
                         </div>
                     </div>
                 </div>
             </div>
         </header>
-        {% block Contenido %}
-        Contenido del template base
-        {% endblock Contenido %}
+
+        {% block Contenido %}{% endblock Contenido %}
         <!-- Footer-->
         <footer class="footer bg-light">
             <div class="container">
